--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  freezed_annotation: ^0.12.0
+  provider: ^5.0.0
+  state_notifier: ^0.7.0
+  flutter_state_notifier: ^0.7.0
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^4.3.3
-  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^3.5.1
+  build_runner: ^1.11.1
+  freezed: ^0.12.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
